Fixed the z-index for modals

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,7 @@ body {
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     left: 0;
     top: 0;
     width: 100%;
@@ -203,6 +203,7 @@ body {
     font-family: 'Press Start 2P', cursive;
     box-shadow: 0 0 10px #00FF00, 0 0 20px #00FF00, 0 0 30px #00FF00;
     text-align: center;
+    z-index: 100;
 }
 
 
